Avance api showOne
